--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,12 @@ __pycache__/
 
 # C extensions
 *.so
+LICENSE
+# Python cache 디렉토리
+__pycache__/
+
+# Visual Studio Code 설정 폴더
+.vscode/
 
 # Distribution / packaging
 .Python
@@ -25,7 +31,7 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
-
+fslic.egg-info/
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
