--- a/src/llm/description_guide.yaml
+++ b/src/llm/description_guide.yaml
@@ -22,18 +22,16 @@ level_2:
     instruction:
       description: "Guidelines for describing the image's colors and atmosphere at each stage."
       Level: "Level 2: Description with Emotional or Literary Expression"
-      Goal: "Add emotional and literary expressions to color descriptions to vividly convey the image's emotional feeling and atmosphere."
+      Goal: "Focus on describing the most prominent objects in the image with color expressions."
       Criteria:
-        - "Use emotional and literary expressions in color description"
-        - "Convey color and scene atmosphere"
-        - "Describe the impression or emotion each color gives"
-      Prompt: "Describe the emotional feeling and atmosphere of colors in the image, and express the impression of each color vividly."
-      Example_Output: |
-        The Shiba Inu dogs, boasting colors like paints on an artist's palette, evoke admiration from viewers.
-        The white Shiba Inu with fur shining brilliantly is as elegant as the queen of the Winter Kingdom.
-        The red Shiba Inu with fur color reminiscent of a flame of passion shows a passionate appearance.
-        The black Shiba Inu, reminiscent of a mysterious night sky, exudes a bewitching charm.
-        The tricolor Shiba Inu with white, red, and black fur harmoniously blended boasts a brilliant and unique beauty.
+        - "Mention simple colors"
+        - "Additional explanation of brightness, saturation, etc."
+      Prompt: "Please briefly list the prominent colors in the image."
+        The Shiba Inu dogs can be largely divided into white, red, black, and tricolor.
+        The white Shiba Inu has clean and bright fur.
+        The red Shiba Inu has deep and vivid fur color.
+        The black Shiba Inu has glossy and dense fur.
+        The tricolor Shiba Inu has white, red, and black fur harmoniously mixed.
     input_format: ["Original image in numpy format and Superpixel-processed image"]
     Output_Format: ["1. Overall description of the input image 2. Color description for each object (describe all objects without classifying by color), output 1 and 2 separated by line break"]
 
@@ -41,11 +39,12 @@ level_3:
   Description_Prompt_Guide:
     instruction:
       description: "Guidelines for describing the image's colors and atmosphere at each stage."
-      Level: "Level 3: In-depth Literary Description"
+      Level: "Level 3: Simple image description with superpixel image added "
       Goal: "Deeply and richly interpret the colors and atmosphere, revealing the image's essence through emotional and literary expressions."
       Criteria:
-        - "Very delicate and deep literary expression"
-        - "Convey subtle nuances of color and emotional depth"
+        - "Use emotional and literary expressions in color description"
+        - "Convey color and scene atmosphere"
+        - "Describe the impression or emotion each color gives"
       Prompt: "Interpret the image's colors and atmosphere with the deepest and richest literary expression."
       Example_Output: |
         The colors of the Shiba Inus are like a living canvas inspired by a poet's palette.
@@ -53,25 +52,25 @@ level_3:
         The passionate red fur erupts with the energy of a flame of passion, like the sunset of a hot summer day.
         The mysterious black fur holds a deep and eternal mystery, like the quietude of a deep night, a veil enveloping an unknown world.
         The harmonious blend of three colors reflects the principles of the universe, performing a symphonic harmony created by different colors.
-    input_format: ["Original image in numpy format and complex image analysis results"]
+    input_format: ["Original image in numpy format"]
     Output_Format: ["1. In-depth interpretation of the input image 2. Literary and emotional depth description of colors for each object, output 1 and 2 separated by line break"]
 
 level_4:
   Description_Prompt_Guide:
     instruction:
       description: "Guidelines for describing the image's colors and atmosphere at each stage."
-      Level: "Level 4: Advanced Literary and Emotional Expression"
-      Goal: "Provide a profound and artistic interpretation of the image's colors and atmosphere, using advanced literary techniques."
+      Level: "Level 4: Description with Emotional or Literary Expression using superpixel images"
+      Goal: "Deeply and richly interpret the colors and atmosphere, revealing the image's essence through emotional and literary expressions."
       Criteria:
-        - "Advanced literary techniques in color description"
-        - "Deep emotional and atmospheric conveyance"
-        - "Artistic and poetic expressions"
-      Prompt: "Provide a profound and artistic interpretation of the image's colors and atmosphere."
+        - "Use emotional and literary expressions in color description"
+        - "Convey color and scene atmosphere"
+        - "Describe the impression or emotion each color gives"
+      Prompt: "Interpret the image's colors and atmosphere with the deepest and richest literary expression."
       Example_Output: |
-        Like colors on an artist's palette, the Shiba Inus evoke admiration from viewers.
-        The white Shiba Inu with fur shining brilliantly is as elegant as the queen of the Winter Kingdom.
-        The red Shiba Inu with fur color reminiscent of a flame of passion shows a passionate appearance.
-        The black Shiba Inu, reminiscent of a mysterious night sky, exudes a bewitching charm.
-        The tricolor Shiba Inu with white, red, and black fur harmoniously blended boasts a brilliant and unique beauty.
+        The colors of the Shiba Inus are like a living canvas inspired by a poet's palette.
+        The pure white fur captures a clean and sacred moment like the first snowlight of a pure winter morning.
+        The passionate red fur erupts with the energy of a flame of passion, like the sunset of a hot summer day.
+        The mysterious black fur holds a deep and eternal mystery, like the quietude of a deep night, a veil enveloping an unknown world.
+        The harmonious blend of three colors reflects the principles of the universe, performing a symphonic harmony created by different colors.
     input_format: ["Original image in numpy format and Superpixel-processed image"]
-    Output_Format: ["1. Overall description of the input image 2. Color description for each object (describe all objects without classifying by color), output 1 and 2 separated by line break"]
+    Output_Format: ["1. In-depth interpretation of the input image 2. Literary and emotional depth description of colors for each object, output 1 and 2 separated by line break"]
