--- a/src/llm/description_guide.yaml
+++ b/src/llm/description_guide.yaml
@@ -22,24 +22,6 @@ level_2:
     instruction:
       description: "Guidelines for describing the image's colors and atmosphere at each stage."
       Level: "Level 2: Description with Emotional or Literary Expression"
-      Goal: "Focus on describing the most prominent objects in the image with color expressions."
-      Criteria:
-        - "Mention simple colors"
-        - "Additional explanation of brightness, saturation, etc."
-      Prompt: "Please briefly list the prominent colors in the image."
-        The Shiba Inu dogs can be largely divided into white, red, black, and tricolor.
-        The white Shiba Inu has clean and bright fur.
-        The red Shiba Inu has deep and vivid fur color.
-        The black Shiba Inu has glossy and dense fur.
-        The tricolor Shiba Inu has white, red, and black fur harmoniously mixed.
-    input_format: ["Original image in numpy format and Superpixel-processed image"]
-    Output_Format: ["1. Overall description of the input image 2. Color description for each object (describe all objects without classifying by color), output 1 and 2 separated by line break"]
-
-level_3:
-  Description_Prompt_Guide:
-    instruction:
-      description: "Guidelines for describing the image's colors and atmosphere at each stage."
-      Level: "Level 3: Simple image description with superpixel image added "
       Goal: "Deeply and richly interpret the colors and atmosphere, revealing the image's essence through emotional and literary expressions."
       Criteria:
         - "Use emotional and literary expressions in color description"
@@ -54,6 +36,25 @@ level_3:
         The harmonious blend of three colors reflects the principles of the universe, performing a symphonic harmony created by different colors.
     input_format: ["Original image in numpy format"]
     Output_Format: ["1. In-depth interpretation of the input image 2. Literary and emotional depth description of colors for each object, output 1 and 2 separated by line break"]
+
+level_3:
+  Description_Prompt_Guide:
+    instruction:
+      description: "Guidelines for describing the image's colors and atmosphere at each stage."
+      Level: "Level 3: Simple image description with superpixel image added "
+      Goal: "Focus on describing the most prominent objects in the image with color expressions."
+      Criteria:
+        - "Mention simple colors"
+        - "Additional explanation of brightness, saturation, etc."
+      Prompt: "Please briefly list the prominent colors in the image."
+      Example_Output: |
+        The Shiba Inu dogs can be largely divided into white, red, black, and tricolor.
+        The white Shiba Inu has clean and bright fur.
+        The red Shiba Inu has deep and vivid fur color.
+        The black Shiba Inu has glossy and dense fur.
+        The tricolor Shiba Inu has white, red, and black fur harmoniously mixed.
+    input_format: ["Original image in numpy format and Superpixel-processed image"]
+    Output_Format: ["1. Overall description of the input image 2. Color description for each object (describe all objects without classifying by color), output 1 and 2 separated by line break"]
 
 level_4:
   Description_Prompt_Guide:
